# cmd-ms-alfred

./: README.md  cmd_ms_alfred.py  pyproject.toml
