[project]
name = "cmd-ms-alfred"
version = "0.1.0"
description = "Retrieve cmd.ms commands and format them for Alfred"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["requests (>=2.32.3,<3.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
